--- a/dashboard/assets/sass/main.scss
+++ b/dashboard/assets/sass/main.scss
@@ -14,7 +14,10 @@ body {
 
 #sideMenu{
   background: $purpleLight;
-  max-width: 280px;
+  width:280px;
+  position:absolute;
+  top:0;
+  bottom: 0;
 
   nav{
     padding-top: 100px;
@@ -23,10 +26,31 @@ body {
       color: $greyDark;
       text-decoration: none;
       padding: 15px 30px;
+      font-weight: 300;
+      transition: all 0.3s ease-in-out;
+      &:hover{
+        background: $purpleDark;
+        border-left: 5px solid $greenNeon;
+        padding: 15px 30px 15px 25px;
+        
+      }
+
+      .fas{
+        color: $greyDark;
+        font-size: 1.4rem;
+        margin-right: .8rem;
+        display: inline-block;
+        width:30px;
+        position: relative;
+        top:2px;
+      }
       &.active{
         background: $purpleDark;
         border-left: 5px solid $greenNeon;
         padding: 15px 30px 15px 25px;
+        .fas{
+          color: $greenNeon;
+        }
       }
     }
 
