--- a/dashboard/assets/sass/_variables.scss
+++ b/dashboard/assets/sass/_variables.scss
@@ -3,3 +3,5 @@ $purpleDark: #282639;
 $greenNeon: #92CF48;
 $greyDark: #F4F6F9;
 $greyLight: #EAEDF3;
+$blueHeader: #003B5B;
+$greyBackground: #E8ECEF;
