--- a/dashboard/assets/sass/main.scss
+++ b/dashboard/assets/sass/main.scss
@@ -64,10 +64,13 @@ body {
     }
   }
   .cards{
+    overflow: auto;
+    margin-bottom: 30px;
     .card{
       background: white;
       border-radius: 5px;
       padding: 20px;
+      overflow: auto;
       .user-img{
         background:
         url("https://s3.amazonaws.com/uifaces/faces/twitter/marcosmoralez/128.jpg")
@@ -102,19 +105,70 @@ body {
         text-align: center;
         margin: 10px 0;
       }
+      .degree{
+        font-size: 0.8rem;
+        color: black;
+        display: block;
+        text-align: center;
+        margin: 10px 0;
+      }
+      .grades{
+        font-size: 1rem;
+        color: purple;
+        display: block;
+        text-align: center;
+        margin: 10px 0;
+      }
+
 
     }
   }
 }
 
+.col-md-2{
+  width:50%;
+  padding: 0 15px;
+  display: inline-block;
+  float: left;
+}
 .col-md-4{
   width:((4*100)/12) + %;
   padding: 0 15px;
   display: inline-block;
+  float: left;
 }
 
 .col-md-3{
   width:((3 *100)/12) + %;
   padding: 0 15px;
   display: inline-block;
+  float: left;
+}
+
+.col-md-9{
+  width:((9 *100)/12) + %;
+  padding: 0 15px;
+  display: inline-block;
+  float: left;
+}
+
+#predictor{
+  margin-left: 280px;
+  padding: 15px;
+
+  h1 {color: purple;
+    font-size:3rem;
+    font-weight:400;
+    margin-bottom: 20px;
+  }
+  .graph{
+    width:100%;
+    height: 200px;
+    padding:15px;
+    overflow: auto;
+  }
+  img{
+    height: 100%;
+    width:100%;
+  }
 }
