--- a/css/bs3/light-bootstrap-dashboard.css
+++ b/css/bs3/light-bootstrap-dashboard.css
@@ -433,12 +433,12 @@ input:focus {
 
 .sidebar[data-color="blue"]:after {
     background: #1F77D0;
-    background: -moz-linear-gradient(top, #1F77D0 0%, #533ce1 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #1F77D0), color-stop(100%, #533ce1));
-    background: -webkit-linear-gradient(top, #1F77D0 0%, #533ce1 100%);
-    background: -o-linear-gradient(top, #1F77D0 0%, #533ce1 100%);
-    background: -ms-linear-gradient(top, #1F77D0 0%, #533ce1 100%);
-    background: linear-gradient(to bottom, #1F77D0 0%, #533ce1 100%);
+    background: -moz-linear-gradient(top, #003b5c 0%, #31708f 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #003b5c), color-stop(100%, #31708f));
+    background: -webkit-linear-gradient(top,#003b5c 0%, #31708f 100%);
+    background: -o-linear-gradient(top, #003b5c 0%, #31708f 100%);
+    background: -ms-linear-gradient(top, #003b5c 0%, #31708f 100%);
+    background: linear-gradient(to bottom, #003b5c 0%, #31708f 100%);
     background-size: 150% 150%;
 }
 
