--- a/proto/css/style.css
+++ b/proto/css/style.css
@@ -1,6 +1,12 @@
+body {
+    height: 100%;
+    overflow: hidden;
+}
+
 .wrapper {
     display: flex;
     width: 100%;
+    height: 100%;
     align-items: stretch;
 }
 
@@ -97,6 +103,8 @@
 #content {
     width: 100%;
     min-height: 100vh;
+    max-height: 100vh;
+    height: 100%;
 }
 
 #sidebarCollapse {
@@ -136,12 +144,98 @@
     border-width: 0px;
 }
 
+#drop-pop {
+    color: #3472F7;
+    font-weight: bold;
+    padding: 10px 0px;
+    margin: 0px;
+    background: transparent;
+    display: inline-block;
+    width: 256px;
+    left: calc((100vw - 260px)/2 + 260px - 128px);
+    top: 80px;
+    z-index: 10;
+    position: absolute;
+    border-radius: 4px;
+    border-width: 2px;
+    border-color: #3472F7;
+    border-style: solid;
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.3);
+    text-align: center;
+}
+
 #sidebarCollapse:active {
     color: #fff;
     background: rgb(180, 161, 125);
     border-radius: 4px;
     border-width: 0px;
 }
+
+.dropdown-menu {
+    top: 0px;
+    left: 0px;
+    margin: 0px;
+    position: relative;
+    display: block;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+/* spinner while redirecting */
+.lds-dual-ring {
+    opacity: 1;
+    padding: 0px;
+    margin: 0px;
+    display: inline-block;
+    width: 64px;
+    height: 64px;
+    top: 128px;
+    z-index: 10;
+    position: absolute;
+}
+.lds-dual-ring:after {
+    content: " ";
+    display: block;
+    width: 46px;
+    height: 46px;
+    margin: 1px;
+    border-radius: 50%;
+    border: 5px solid #003b5c;
+    border-color: #003b5c transparent #003b5c transparent;
+    animation: lds-dual-ring 1.2s linear infinite;
+}
+
+/* custom scrollbar */
+::-webkit-scrollbar {
+    width: 8px;
+    background-color: white;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #85714D;
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background-color: lightgray;
+}
+
+@keyframes lds-dual-ring {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}  
 
 @media(max-width: 768px) {
     #sidebar{
