--- a/proto/css/style.css
+++ b/proto/css/style.css
@@ -171,22 +171,99 @@ body {
     border-width: 0px;
 }
 
+/* drop down */
 .dropdown-menu {
     top: 0px;
     left: 0px;
+    height: calc(2.25rem + 2px);
     margin: 0px;
     position: relative;
     display: block;
     padding: 0.375rem 0.75rem;
     font-size: 1rem;
     line-height: 1.5;
-    color: #495057;
-    background-color: #fff;
-    background-clip: padding-box;
-    border: 1px solid #ced4da;
     border-radius: 0.25rem;
-    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
+
+.dropdown-menu select {
+    display: none; /* hide original select */
+}
+
+.select-selected {
+    font-size: 14px;
+    color: #495057;
+    margin: 0px;
+    padding: 0px;
+    background-color: transparent;
+    padding: 0px 0px;
+    cursor: pointer;
+}
+
+.select-selected::after {
+    /* style arrow inside select element */
+    position: absolute;
+    content: "";
+    top: 14px;
+    right: 10px;
+    width: 0;
+    height: 0;
+    border: 6px solid transparent;
+    border-color: #495057 transparent transparent transparent;
+}
+
+.select-selected.select-arrow-active:after {
+    /*point the arrow upwards when the select box is open (active):*/
+    border-color: transparent transparent #495057 transparent;
+    top: 7px;
+}
+
+.select-items div {
+    font-size: 14px;
+    padding: 8px 16px;
+    cursor: pointer;
+    border: none;
+}
+
+.select-items > div:first-of-type{
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.select-items > div:last-of-type {
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.select-items {
+    /*style items (options):*/
+    font-size: 14px;
+    margin-top: 1vh;
+    position: absolute;
+    background-color: white;
+    top: 100%;
+    left: 0;
+    right: 0;
+    z-index: 2000;
+    border-radius: 10px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgba(0, 0, 0, 0.15);
+    box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.15);
+    transition: all 370ms cubic-bezier(0.34, 1.61, 0.7, 1);
+    transition-property: all;
+    transition-duration: 370ms;
+    transition-timing-function: cubic-bezier(0.34, 1.61, 0.7, 1);
+    transition-delay: 0s;
+}
+.select-hide {
+    /*hide the items when the select box is closed:*/
+    display: none;
+}
+
+.select-items div:hover, .same-as-selected {
+    background-color: rgb(238, 238, 238);
+}
+
 
 /* spinner while redirecting */
 .lds-dual-ring {
